--- a/muikku-bom/pom.xml
+++ b/muikku-bom/pom.xml
@@ -162,6 +162,12 @@
 
       <dependency>
         <groupId>fi.muikku</groupId>
+        <artifactId>debug</artifactId>
+        <version>${muikku.version}</version>
+      </dependency>
+      
+      <dependency>
+        <groupId>fi.muikku</groupId>
         <artifactId>core-plugins</artifactId>
         <version>${muikku.version}</version>
       </dependency>
