--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 
 	<modules>
 		<module>muikku-bom</module>
+    <module>muikku-debug</module>
 		<module>muikku-core</module>
 		<module>muikku-core-plugins</module>
     <module>muikku-calendar</module>
